# actnempy

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
TestData/: metadata.json  sindy_library_specs.json
actnempy/: __init__.py  actnem.py  prx.mplstyle
actnempy/SINDy/: PDE_FIND.py  __init__.py  anise.py  benchmark.py  library_tools.py  pde.py  weak_form.py
actnempy/utils/: __init__.py  defect_finder.py  grid.py  misc.py  nematic_plot.py  optimal_SVHT_coef.py
examples/: SINDy.ipynb  analyze_trajectory.ipynb  basic_example.ipynb
tests/: defects.npz  defects.py  divu.npz  num_defects.npz  ocorr.npz  test_actnem.py  test_defect_finder.py  test_grid.py  test_library_tools.py  test_pde.py  test_utils.py  vcorr.npz
