[metadata]
name = actnempy
version = 0.0.1
author = Chaitanya Joshi
author_email = chaitanyajoshi.usa@gmail.com
description = Analysis suite for 2D active nematics data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/joshichaitanya3/actnempy
project_urls =
    Bug Tracker = https://github.com/joshichaitanya3/actnempy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
